// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Render with null date 1`] = `
<button
  className="d-inline-flex align-items-center btn btn-primary btn-sm"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Schedule
  <span
    style={
      Object {
        "marginLeft": "6px",
      }
    }
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M12 20C16.4 20 20 16.4 20 12S16.4 4 12 4 4 7.6 4 12 7.6 20 12 20M12 2C17.5 2 22 6.5 22 12S17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M17 13.9L16.3 15.2L11 12.3V7H12.5V11.4L17 13.9Z"
        fill="currentColor"
      />
    </svg>
  </span>
</button>
`;

exports[`(2) Render with date 1`] = `
<div
  className="post-scheduler-scheduled"
>
  <span
    className="date"
    onClick={[Function]}
  >
    2020-12-12 12:12
  </span>
  <span
    className="reset-date"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`(3) Render dialog body 1`] = `
Array [
  <div
    className="picker"
  >
    <div
      className="rdt rdtStatic rdtOpen"
    >
      <div
        className="rdtPicker"
      >
        <div
          className="rdtDays"
        >
          <table>
            <thead>
              <tr>
                <th
                  className="rdtPrev"
                  onClick={[Function]}
                >
                  <span>
                    ‹
                  </span>
                </th>
                <th
                  className="rdtSwitch"
                  colSpan={5}
                  data-value={11}
                  onClick={[Function]}
                >
                  December 2020
                </th>
                <th
                  className="rdtNext"
                  onClick={[Function]}
                >
                  <span>
                    ›
                  </span>
                </th>
              </tr>
              <tr>
                <th
                  className="dow"
                >
                  Su
                </th>
                <th
                  className="dow"
                >
                  Mo
                </th>
                <th
                  className="dow"
                >
                  Tu
                </th>
                <th
                  className="dow"
                >
                  We
                </th>
                <th
                  className="dow"
                >
                  Th
                </th>
                <th
                  className="dow"
                >
                  Fr
                </th>
                <th
                  className="dow"
                >
                  Sa
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="rdtDay rdtOld rdtDisabled"
                  data-month={10}
                  data-value={29}
                  data-year={2020}
                >
                  29
                </td>
                <td
                  className="rdtDay rdtOld rdtDisabled"
                  data-month={10}
                  data-value={30}
                  data-year={2020}
                >
                  30
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={1}
                  data-year={2020}
                >
                  1
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={2}
                  data-year={2020}
                >
                  2
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={3}
                  data-year={2020}
                >
                  3
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={4}
                  data-year={2020}
                >
                  4
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={5}
                  data-year={2020}
                >
                  5
                </td>
              </tr>
              <tr>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={6}
                  data-year={2020}
                >
                  6
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={7}
                  data-year={2020}
                >
                  7
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={8}
                  data-year={2020}
                >
                  8
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={9}
                  data-year={2020}
                >
                  9
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={10}
                  data-year={2020}
                >
                  10
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={11}
                  data-year={2020}
                >
                  11
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={12}
                  data-year={2020}
                >
                  12
                </td>
              </tr>
              <tr>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={13}
                  data-year={2020}
                >
                  13
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={14}
                  data-year={2020}
                >
                  14
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={15}
                  data-year={2020}
                >
                  15
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={16}
                  data-year={2020}
                >
                  16
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={17}
                  data-year={2020}
                >
                  17
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={18}
                  data-year={2020}
                >
                  18
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={19}
                  data-year={2020}
                >
                  19
                </td>
              </tr>
              <tr>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={20}
                  data-year={2020}
                >
                  20
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={21}
                  data-year={2020}
                >
                  21
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={22}
                  data-year={2020}
                >
                  22
                </td>
                <td
                  className="rdtDay rdtDisabled"
                  data-month={11}
                  data-value={23}
                  data-year={2020}
                >
                  23
                </td>
                <td
                  className="rdtDay rdtActive rdtToday"
                  data-month={11}
                  data-value={24}
                  data-year={2020}
                  onClick={[Function]}
                >
                  24
                </td>
                <td
                  className="rdtDay"
                  data-month={11}
                  data-value={25}
                  data-year={2020}
                  onClick={[Function]}
                >
                  25
                </td>
                <td
                  className="rdtDay"
                  data-month={11}
                  data-value={26}
                  data-year={2020}
                  onClick={[Function]}
                >
                  26
                </td>
              </tr>
              <tr>
                <td
                  className="rdtDay"
                  data-month={11}
                  data-value={27}
                  data-year={2020}
                  onClick={[Function]}
                >
                  27
                </td>
                <td
                  className="rdtDay"
                  data-month={11}
                  data-value={28}
                  data-year={2020}
                  onClick={[Function]}
                >
                  28
                </td>
                <td
                  className="rdtDay"
                  data-month={11}
                  data-value={29}
                  data-year={2020}
                  onClick={[Function]}
                >
                  29
                </td>
                <td
                  className="rdtDay"
                  data-month={11}
                  data-value={30}
                  data-year={2020}
                  onClick={[Function]}
                >
                  30
                </td>
                <td
                  className="rdtDay"
                  data-month={11}
                  data-value={31}
                  data-year={2020}
                  onClick={[Function]}
                >
                  31
                </td>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={1}
                  data-year={2021}
                  onClick={[Function]}
                >
                  1
                </td>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={2}
                  data-year={2021}
                  onClick={[Function]}
                >
                  2
                </td>
              </tr>
              <tr>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={3}
                  data-year={2021}
                  onClick={[Function]}
                >
                  3
                </td>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={4}
                  data-year={2021}
                  onClick={[Function]}
                >
                  4
                </td>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={5}
                  data-year={2021}
                  onClick={[Function]}
                >
                  5
                </td>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={6}
                  data-year={2021}
                  onClick={[Function]}
                >
                  6
                </td>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={7}
                  data-year={2021}
                  onClick={[Function]}
                >
                  7
                </td>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={8}
                  data-year={2021}
                  onClick={[Function]}
                >
                  8
                </td>
                <td
                  className="rdtDay rdtNew"
                  data-month={0}
                  data-value={9}
                  data-year={2021}
                  onClick={[Function]}
                >
                  9
                </td>
              </tr>
            </tbody>
            <tfoot>
              <tr>
                <td
                  className="rdtTimeToggle"
                  colSpan={7}
                  onClick={[Function]}
                >
                  21:32
                </td>
              </tr>
            </tfoot>
          </table>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="text-center"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Schedule
    </button>
  </div>,
]
`;
